--- a/src/style.css
+++ b/src/style.css
@@ -16,4 +16,22 @@
 
 #workspace {
     grid-area: content;
+
+    display: grid;
+    place-items: center;
+}
+
+.add-to-do {
+    border: 1px solid white;
+    border-radius: 5px;
+
+    background-color: #14FFEC;
+
+    width: min(140px, 25%);
+    height: 5%;
+
+    font-family: 'sans-serif';
+    font-size: 100%;
+    color: white;
+    font-weight: 600;
 }
