--- a/src/style.css
+++ b/src/style.css
@@ -35,3 +35,16 @@
     color: white;
     font-weight: 600;
 }
+
+.modal {
+    position: fixed;
+    z-index: 1;
+    left: 20%;
+    right: 35%;
+    top: 25%;
+
+    width: 60%;
+    height: 50%;
+
+    background-color: #323232;
+}
