--- a/src/style.css
+++ b/src/style.css
@@ -57,7 +57,7 @@ form {
 
 .form-element {
     color: white;
-    font-family: 'Teko';
+    font-family: 'Teko', 'Sans-serif';
     font-size: 150%;
     font-weight: 600;
 }
@@ -66,6 +66,10 @@ input {
     border-radius: 5px;
     border: 0px solid white;
     outline: none;
+    
+    font-size: 65%;
+    font-family: 'Teko', 'Sans-serif';
+    font-weight: 500;
 }
 
 input:hover, input:focus {
