--- a/src/style.css
+++ b/src/style.css
@@ -55,13 +55,15 @@ form {
     height: 100%;
 
     display: grid;
-    grid-template-columns: 50%;
+    grid-template-columns: 50% 50%;
     grid-template-rows: 30% 30% 30% 10%;
     grid-template-areas: 
     'title description'
     'Due-date priority'
     'project project'
     'submit submit';
+
+    justify-content: center;
 }
 
 .title {
@@ -93,6 +95,8 @@ form {
     font-size: 100%;
     color: white;
     font-weight: 600;
+
+    grid-area: submit;
 }
 
 .form-element {
@@ -100,6 +104,10 @@ form {
     font-family: 'Teko', 'Sans-serif';
     font-size: 150%;
     font-weight: 600;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 input {
@@ -110,6 +118,8 @@ input {
     font-size: 65%;
     font-family: 'Teko', 'Sans-serif';
     font-weight: 500;
+
+    width: 30%;
 }
 
 input:hover, input:focus {
