Style the form submit button more, add hover effect

--- a/src/style.css
+++ b/src/style.css
@@ -97,6 +97,14 @@ form {
     font-weight: 600;
 
     grid-area: submit;
+
+    width: 15%;
+    height: 70%;
+}
+
+.submit:hover {
+    font-weight: 700;
+    border: 1px solid white;
 }
 
 .form-element {
