Update sub-menu display when parent has .show-menu

--- a/src/style.css
+++ b/src/style.css
@@ -137,4 +137,12 @@ input:hover, input:focus {
     border: 1px solid #14FFEC;
 }
 
+.sub-menu {
+    display: none;
+}
+
+.showMenu .sub-menu {
+    display: block;
+}
+
 
