--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,10 @@
 #sidebar {
     grid-area: sidebar;
     border: 1px solid blue;
+    background-color: #323232;
+    color: white;
+    font-family: 'Teko', 'sans-serif';
+    font-size: 140%;
 }
 
 #workspace {
@@ -145,4 +149,15 @@ input:hover, input:focus {
     display: block;
 }
 
+.project-sidebar {
+    padding-left: 15%;
+}
 
+ ul {
+    margin: 0px;
+    padding: 0;
+ }
+
+ li {
+    list-style-type: none;
+ }
