Set the to-do cards

--- a/src/style.css
+++ b/src/style.css
@@ -182,6 +182,10 @@ input:hover, input:focus {
     font-size: 150%;
  }
 
+ .to-do-card span:nth-child(2), .to-do-card span:nth-child(3) {
+    display: none;
+ }
+
  .project-to-dos {
     width: 100%;
     height: 100%;
